# bitaksi

./: .env.example  .gitignore  Dockerfile  PROJECT_TEACHER_REPORT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
docs/benchmarks/: bitaksi_benchmark_v2.json  full_eval_results.json
docs/reports/: 01_system_overview.md  02_ingestion_and_indexing.md  03_retrieval_and_grounding.md  04_generation_api_and_ui.md  05_evaluation_testing_and_roadmap.md  06_improvements_and_future_plan.md  README.md
reports/: week1-mert-kirti.md  week1-polat-korkmaz.md  week2-mert-kirti.md  week2-polat-korkmaz.md  week3-mert-kirti.md  week3-polat-korkmaz.md  week4-mert-kirti.md  week4-polat-korkmaz.md
scripts/: run_benchmark.py  run_full_evaluation.py
src/: config.py
src/api/: dependencies.py  main.py
src/api/routes/: chat.py  documents.py  evaluation.py  health.py
src/api/static/: chunks.html  index.html  simulation.html
src/evaluation/: generation_metrics.py  retrieval_metrics.py
src/generation/: response_generator.py
src/ingestion/: document_processor.py  indexer.py  semantic_chunker.py  vision_extractor.py
src/retrieval/: bm25_retriever.py  hybrid_retriever.py  hyde.py  query_decomposition.py  query_expansion.py  reranker.py  retriever.py  smart_grounding.py
src/utils/: enums.py  llm.py
tests/: test_chat_service.py  test_hybrid_retrieval.py  test_llm_utils.py  test_query_strategies.py  test_response_generator.py  test_retrieval_metrics.py  test_semantic_chunker.py  test_smart_grounding.py
ui/: index.html
